--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -1,5 +1,7 @@
 .statistics {
-  width: 380px;
+  min-width: 320px;
+  width: 90%;
+  max-width: 500px;
   margin: 30px auto;
 
   background-color: #fff;
@@ -8,8 +10,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-align: center;
 }
 
