--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -1,7 +1,7 @@
 .transactionHistory {
   min-width: 320px;
-
   width: 90%;
+  max-width: 700px;
   margin: 30px auto;
 
   background-color: #fff;
@@ -10,7 +10,7 @@
 }
 
 .tableHead {
-  height: 30px;
+  height: 40px;
   background-color: rgb(30, 170, 212);
   color: #fff;
   font-weight: 600;
@@ -27,7 +27,7 @@
 }
 
 .tableBody {
-  height: 30px;
+  height: 40px;
   line-height: 1.5;
   color: rgb(141, 148, 155);
 }
